WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241397
REGRESSION (
251316@main
): Release-configuration WTF::StringView is not usable from apps building in Debug
https://bugs.webkit.org/show_bug.cgi?id=241397
Summary
REGRESSION (251316@main): Release-configuration WTF::StringView is not usable...
David Quesada
Reported
2022-06-07 18:47:31 PDT
rdar://94587929
Attachments
Add attachment
proposed patch, testcase, etc.
David Quesada
Comment 1
2022-06-07 19:30:19 PDT
https://github.com/WebKit/WebKit/pull/1366
EWS
Comment 2
2022-06-08 11:16:46 PDT
Committed
r295389
(
251395@main
): <
https://commits.webkit.org/251395@main
> Reviewed commits have been landed. Closing PR #1366 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug