REGRESSION (251316@main): Release-configuration WTF::StringView is not usable from apps building in Debug https://bugs.webkit.org/show_bug.cgi?id=241397 rdar://94587929

Reviewed by Alexey Proskuryakov.

251316@main / r295270 changed the logic of JavaScriptCore's scripts to generate inspector code,
such that the generated code now has a dependency on WTF::StringView. This is problematic for
configurations where an app uses these scripts to generate code then attempts to compile that
code in Debug configuration while linking against a Release-configuration WebKit stack. This
boils down to a disagreement between WTF and the app about how StringView's "underlyingString"
methods are implemented, resulting from a difference in `CHECK_STRINGVIEW_LIFETIME`. WTF doesn't
export StringView::underlyingStringIsValid() and StringView::setUnderlyingString(), but the
client expects to be able to link them.

Resolve this discrepancy by adjusting the implementation of these methods so that WTF always
exports symbols for these functionalities, even if they happen to be no-ops due to WTF itself
being built in Release.

* Source/WTF/wtf/text/StringView.h:
* Source/WTF/wtf/text/StringView.cpp:
(WTF::StringView::underlyingStringIsValidImpl const):
(WTF::StringView::setUnderlyingStringImpl):
(WTF::StringView::underlyingStringIsValid const): Deleted.
(WTF::StringView::setUnderlyingString): Deleted.

Canonical link: https://commits.webkit.org/251395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295389 268f45cc-cd09-0410-ab3c-d52691b4dbfc